2011-01-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/yeeloong/init.c (grub_machine_init): Init boot
	module.

2011-01-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (fwstart): Add lost LDFLAGS.

2011-01-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfsinfo.c (grub_cmd_zfs_bootfs): Quote bootpath and
	diskdevid.

2011-01-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix compilation on cygwin.

	* conf/Makefile.common (STRIPFLAGS_KERNEL): Add -F elf32-i386 and
	-R .drectve on cygwin.
	* conf/i386-pc-cygwin-img-ld.sc: Merge rdata and pdata into data.
	* configure.ac: Use $(top_builddir) in TARGET_OBJ2ELF.
	(COND_CYGWIN): New condition.
	* grub-core/Makefile.am (%.mod): Set TARGET_OBJ2ELF.
	* grub-core/genmod.sh.in: Use ${TARGET_OBJ2ELF} and
	not @TARGET_OBJ2ELF@.
	* util/grub-pe2elf.c (write_symbol_table): Use pe_symtab->type and not
	type to determine whether aux is to be used.

2011-01-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/ieee1275/ofpath.c (grub_util_devname_to_ofpath): Use the
	realpath'ed device string.
	Handle floppy (somewhat).
	Issue error in unknown case rather than garbage.
	Reported by: Axel Beckert.

2011-01-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/00_header.in (load_video): Handle the case when no video
	drivers available.
	Thanks to: Axel Beckert.

2011-01-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkfont.c (write_font_pf2): Use appropriate type for data
	variable. Fixes problem on big endian platforms.

2011-01-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (ieee1275_fb): Disable on sparc.
	It doesn't work well there.

2011-01-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/context.c (grub_env_context_close): Silence spurious
	warning.
	* grub-core/normal/menu.c (grub_menu_execute_entry): Likewise.
	* grub-core/partmap/msdos.c (pc_partition_map_embed): Use unsigned
	counter.
